--- a/archive.html
+++ b/archive.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- Main heading with logo -->
-<h1 id="pageTitle"><img src="Images/star.png" id="logo">The Daily Ration</h1>
+<h1 id="pageTitle"><img src="star.png" id="logo">The Daily Ration</h1>
 
 <!-- Top navigation bar -->
 <nav>
