--- a/archive.html
+++ b/archive.html
@@ -4,7 +4,7 @@
 	<!-- Title is for the page name -->
 	<title>The Daily Ration - Archive</title>
 	<!-- Makes the pic for the page -->
-	<link rel="icon" href="Images/star.png">
+	<link rel="icon" href="star.png">
 	<!-- References the CSS file for formatting -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
