--- a/archive.html
+++ b/archive.html
@@ -107,6 +107,8 @@
 	<p align="center"><iframe src="https://docs.google.com/document/d/1yBHZpJbcVsK2qOcGJVfD6R2BJr56YOvjV3Ki_x_4-KY/preview?usp=sharing">Loading…</iframe></p>
 	<h3>Edition 7</h3>
 	<p align="center"><iframe src="https://docs.google.com/document/d/1R05wOcKiYctZDSeYthbEA3hHVIfVc9-FWOIZpAh5TjU/preview?usp=sharing">Loading…</iframe></p>
+	<h3>Edition 8</h3>
+	<p align="center"><iframe src="https://docs.google.com/document/d/1L6rXpqriSunKkuAhaa0aZ6JipDZj3TterPPj1xE73hM/preview?usp=sharing">Loading…</iframe></p>
 </div>
 
 </body>
