--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 <!-- Div for Latest Release -->
 <div>
 	<h3>Check Out the Latest Edition Here!</h3>
-	<p align="center"><iframe src="https://docs.google.com/document/d/1R05wOcKiYctZDSeYthbEA3hHVIfVc9-FWOIZpAh5TjU/preview?usp=sharing">Loading…</iframe></p>
+	<p align="center"><iframe src="https://docs.google.com/document/d/1ev1RlKbpxdIt9akEchKVw4IfWUZsqm4aJBxUgQnm97A/preview?usp=sharing">Loading…</iframe></p>
 </div>
 
 <div>
 	<h3>Submit your work here! If you have any problems or questions, check out our Discord for a Server Admin!</h3>
-	<p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSceosogm8R8wNojxmtXluShjSJst10J6bZqLwERYPt5gKekcA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
+	<p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSceosogm8R8wNojxmtXluShjSJst10J6bZqLwERYPt5gKekcA/viewform?usp=sf_link" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
 </div>
 
 </body>
